--- a/students/templates/student_contact.html
+++ b/students/templates/student_contact.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <title>
-          Students ADD
+          Students contact
       </title>
    </head>
    <body>
